blog-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-api-deployment
  labels:
    app: blog-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-api
  template:
    metadata:
      labels:
        app: blog-api

    spec:
      containers:
        - name: blog-api
          image: mykubetest.azurecr.io/node-app-2:latest
          ports:
          - containerPort: 8080
