blog-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-api-service
spec:
  selector: 
    app: blog-api
  ports:
    - port: 3000 
      targetPort: 8080
