blog-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: blog-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: bytebot.xyz 
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: blog-api-service
            port:
              number: 3000
